--- a/angular.json
+++ b/angular.json
@@ -96,6 +96,16 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "prerender": false,
+            "ssr": false,
+            "browserTarget": "kanban-pano:build:production",
+            "firebaseProject": "kanbanpano",
+            "firebaseHostingSite": "kanbanpano"
+          }
         }
       }
     }
